--- a/camerafilter/src/main/AndroidManifest.xml
+++ b/camerafilter/src/main/AndroidManifest.xml
@@ -5,5 +5,9 @@
             android:theme="@style/AppTheme.StatusTranslate"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".FilterCameraActivity"
+            android:theme="@style/AppTheme.StatusTranslate"
+            android:screenOrientation="portrait"
+            />
     </application>
 </manifest>
